# obsidian-latex-template

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  Tasks.md  package.json  pyproject.toml
.obsidian/: app.json  community-plugins.json  hotkeys.json
.obsidian/plugins/copilot/: data.json
.obsidian/plugins/local-gpt/: data.json
.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
.obsidian/plugins/obsidian-languagetool-plugin/: data.json
.obsidian/plugins/omnisearch/: data.json
.search_and_replace_hook/: .pre-commit-hooks.yaml  regex_replace.py  setup.py
deliverables/ScientificReport/: scientific_report.md
deliverables/ScientificReport/.assets/: eisvogel.latex
dspro/: README.md  data_loader.py
dspro/1_data_collection/: playwright_base_config.ts  playwright_setup_environment.ts  scrape.spec.ts
dspro/3_data_preparation/00_sample_use/: example_use.ipynb
dspro/5_evaluation/: best_run_loader.py  get_best_runs.ipynb  wandb_downloader.py
setup_environ/: setup_environ_and_train.sh  setup_environ_and_train_colab.ipynb
