[tool.poetry]
name = "dspro"
version = "0.1.0"
description = ""
authors = ["Linus Schlumberger <email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
pillow = "^10.2.0"
wandb = "^0.16.6"
uuid = "^1.30"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.2"
jupyter = "^1.0.0"
notebook = "^7.1.0"
nbconvert = "^7.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
