[tool.poetry]
name = "dspro"
version = "0.1.0"
description = ""
authors = ["Linus Schlumberger <email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
pillow = "^10.2.0"
wandb = "0.18.7"
uuid = "^1.30"
joblib = "^1.4.2"
pyarrow = "^17.0.0"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.2"
jupyter = "^1.0.0"
notebook = "^7.1.0"
nbconvert = "^7.16.4"
black = {version = "24.8.0", extras = ["jupyter"]}
pre-commit = "^3.8.0"
line-profiler = "^4.1.3"
memory-profiler = "^0.61.0"
poetry-plugin-export = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 300
